"Highlight" box on home page.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,30 @@ layout: homepage
 title: SocialGeeks Inc.
 ---
 
-<div class="whiteGreyBoxTop"></div>
-	<div class="whiteBoxBG" style="height: 108px;">
-		<div style="background-color: #dcdcdc; margin: 0 17px 0 16px; padding: 0 10px 0 10px; height: 40px;"></div>
-		<div style="background-image:url(/public/images/frames/whiteContentGreyBottom.png); height:15px; margin: 0 17px 0 16px;"></div>
-		<div style="float: left; width: 324px; height: 104px;  margin-left: 16px;">
-			<div style="float: left; width: 89px; height: 104px"></div>
-			<div style="float: right; width: 3px; height: 104px; background-image: url(/public/images/main/separator.png);"></div>
+<div class="highlightBox">
+	<div class="panel">
+		<img src="/public/images/icons/geekOn.png" />
+		<div>
+			<h3>Get Your Geek On</h3>
+			Upcoming events and previous geek outs focused on learing by doing.
 		</div>
-		<div style="float: left; width: 324px; height: 104px">
-			<div style="float: left; width: 89px; height: 104px"></div>
-			<div style="float: right; width: 3px; height: 104px; background-image: url(/public/images/main/separator.png);"></div>
-		</div>
-		<div style="float: left; width: 324px; height: 104px">
-			<div style="float: left; width: 89px; height: 104px"></div>
+	</div>	
+	<div class="panel">
+		<img src="/public/images/icons/geekOn.png" />
+		<div>
+			<h3>What We Do</h3>
+			Connecting and collecting geeks for greater knowledge.
 		</div>
 	</div>
-<div class="whiteGreyBoxBottom"></div>
+	<div class="panel">
+		<img src="/public/images/icons/getInvolved.png" />
+		<div>
+			<h3>Get Involved</h3>
+			Help us by becoming a sponsor, mentor or geek contributor.
+		</div>
+	</div>
+</div>
+
 <div class="blackBoxTop"></div>
 <div class="blackBoxBG">
 
