Remove _includes/arcticles.html file and the include from index.html

--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@ title: SocialGeeks Inc.
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</div>
 	</div>
-
-{% include articles.html %}
-
+   <!-- remove the following 1234 and the design breaks.  not sure why.  fix me graphikos! -->1234
 </div>
 <div class="blackBoxBottom"></div>
 
