Move about.md to about.html. Link up about.html from _includes/themes/socialgeeks/homepage.html and index.html

--- a/about.html
+++ b/about.html
@@ -6,30 +6,36 @@ tags: []
 navigation: page 
 ---
 
-### Mission/Vision  
+<h2>Mission/Vision</h2>
 
 SocialGeeks Inc. is a student leadership organization focusing on project and game based learning through the use of community members and professionals in the fields of technology.   
 
 Geek incubator. Collect geeks, mentor, be mentored, use network to enhance, supplement, replace high school computer curriculum. Wash, repeat.  
 
-### What can you do to help?  Get involved.  
+<h2>What can you do to help?  Get involved.</h2>
 
-* Join us, at one of our events or <a href="contact.html">contact us</a> so we can get to know you. 
+<h3>Join us</h3>
+at one of our events or <a href="contact.html">contact us</a> so we can get to know you.
 
-* Mentor - Work with high school students at one of our upcoming events, we'll train you.  Even better, let us do an event based off of something from your knowledge base and you can train us.  
+<h3>Mentor</h3>
+Work with high school students at one of our upcoming events, we'll train you.  Even better, let us do an event based off of something from your knowledge base and you can train us.  
 
-* Contribute Knowledge - Go to our <a href="https://github.com/socialgeeks">GitHub Organization</a> and submit pull requests to any of our respositories. We believe in the power of transparency and accumulated group knowledge.  
+<h3>Contribute Knowledge</h3>
+Go to our <a href="https://github.com/socialgeeks">GitHub Organization</a> and submit pull requests to any of our respositories. We believe in the power of transparency and accumulated group knowledge.  
 
-### Board of Directors  
+<h2>Board of Directors</h2>
 
 Brian McManus -  
 
 Dan Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).  
 
 Derek Thomas - Having an eye for good design and layout, Derek leads design and development efforts as well as public relations at Galaxis Communications. Prior to Galaxis Communications, Derek has worked with the Internet pretty much since its commercialization with over 15 years of freelance web design and development experience.  
-### Events & Activities - experiental learning  
 
-### Special Thanks  
+<h2>Events & Activities</h2>
+experiental learning  
+
+<h2>Special Thanks</h2>  
+
 -- CTF Mentors  
 -- Twin Falls High School  
 -- College of Southern Idaho  
