--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ title: SocialGeeks Inc.
 		</div>
 	</div>	
 	<div class="panel">
+		<a href="/about.html">
 		<img src="/public/images/icons/geekOn.png" />
 		<div>
 			<h3>What We Do</h3>
 			Connecting and collecting geeks for greater knowledge.
 		</div>
+		</a>
 	</div>
 	<div class="panel">
 		<img src="/public/images/icons/getInvolved.png" />
