Add posts.html and events.html.  Link to posts and events from index.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@ title: SocialGeeks Inc.
 
 <div class="highlightBox">
 	<div class="panel">
+		<a href="events.html">
 		<img src="/public/images/icons/geekOn.png" />
 		<div>
-			<h3>Get Your Geek On</h3>
+			<h3>Get Your Geek On></h3>
 			Upcoming events and previous geek outs focused on learing by doing.
 		</div>
+		<a href="events.html">
 	</div>	
 	<div class="panel">
 		<a href="/about.html">
@@ -33,7 +35,7 @@ title: SocialGeeks Inc.
 <div class="blackBoxBG summaryBox">
 	<div style="margin: 0 30px; color: #fff;">
 		<div style="width: 50%; float: left;">
-			<h3>Feature Events</h3>
+			<h3><a href="events.html">Feature Events</a></h3>
 
 			<ul class="posts">
 				{% for post in site.posts %}
@@ -46,7 +48,7 @@ title: SocialGeeks Inc.
 				{% endfor %}
 			</ul>
 
-			<h3>Recent Blogs Posts</h3>
+			<h3><a href="posts.html">Recent Posts</a></h3>
 
 			<ul class="posts">
 			{% for post in site.posts %}
