Fix navigation in posts

--- a/_posts/2013-07-09-SocialGeeks-Inc.html
+++ b/_posts/2013-07-09-SocialGeeks-Inc.html
@@ -4,6 +4,7 @@ title: "SocialGeeks Inc."
 description: "SocialGeeks have incorporated"
 thumbnail: articles_of_incorporation.jpg
 category: post 
+navigation: post
 tags: []
 ---
 
