--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ title: SocialGeeks Inc.
 		<a href="events.html">
 		<img src="/public/images/icons/geekOn.png" />
 		<div>
-			<h3>Get Your Geek On></h3>
+			<h3>Get Your Geek On</h3>
 			Upcoming events and previous geek outs focused on learing by doing.
 		</div>
-		<a href="events.html">
+		</a>
 	</div>	
 	<div class="panel">
 		<a href="/about.html">
@@ -36,8 +36,8 @@ title: SocialGeeks Inc.
 <div class="blackBoxTop"></div>
 <div class="blackBoxBG summaryBox">
 	<div style="margin: 0 30px; color: #fff;">
-		<div style="width: 50%; float: left;">
-			<h3><a href="events.html">Feature Events</a></h3>
+		<div style="width: 47%; float: left; padding: 10px;">
+			<h3><a href="events.html">Featured Events</a></h3>
 
 			<ul class="posts">
 			{% for post in site.posts %}
@@ -46,10 +46,15 @@ title: SocialGeeks Inc.
 					{% if tag contains "feature" %}
 					<li>
 						{% if post.thumbnail %}
-						<img src="public/images/thumbnails/{{ post.thumbnail }}" alt="Featured Event" align="left" />
+							<img src="public/images/thumbnails/{{ post.thumbnail }}" alt="Featured Event" />
 						{% endif %}
-					<span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br />
-					{{ post.description }}</li>
+						<div class="info">
+							<div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
+							<div class="date">{{ post.date | date_to_long_string }}</div>
+							<div class="description">{{ post.description }}</div>
+						</div>
+						<div class="clear" style="height: 20px;"></div>
+					</li>
 					{% endif %}
 				{% endfor %}
 			{% endfor %}
@@ -62,16 +67,21 @@ title: SocialGeeks Inc.
 				{% if post.category contains "post" %}
 				<li>
 					{% if post.thumbnail %}
-       					<img src="public/images/thumbnails/{{ post.thumbnail }}" alt="Featured Event" align="left" />
-                                        {% endif %}
-				<span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
-				{{ post.description }}</li>
+						<img src="public/images/thumbnails/{{ post.thumbnail }}" alt="Featured Event" />
+					{% endif %}
+					<div class="info">
+						<div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
+						<div class="date">{{ post.date | date_to_long_string }}</div>
+						<div class="description">{{ post.description }}</div>
+					</div>
+					<div class="clear" style="height: 20px;"></div>
+				</li>
 				{% endif %}
 			{% endfor %}
 			</ul>
 
 		</div>		
-		<div style="width: 50%; float: left;">
+		<div style="width: 47%; float: right;">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -79,8 +89,8 @@ title: SocialGeeks Inc.
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</div>
+		<div class="clear"></div>
 	</div>
-   <!-- remove the following 1234 and the design breaks.  not sure why.  fix me graphikos! -->1234
 </div>
 <div class="blackBoxBottom"></div>
 
