Start of basic jekyll themes for events and blog post pages.

--- a/_posts/2013-07-09-SocialGeeks-Inc.html
+++ b/_posts/2013-07-09-SocialGeeks-Inc.html
@@ -1,10 +1,9 @@
 ---
-layout: page 
+layout: post 
 title: "SocialGeeks Inc."
 description: "SocialGeeks have incorporated"
 thumbnail: articles_of_incorporation.jpg
 category: post 
-navigation: post
 tags: []
 ---
 
