--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: SocialGeeks Inc.
 					<div class="4u">
 					
 						<section class="box-spotlight">
-							<h2 class="icon icon-paper">Upcoming Event</h2>
+							<h2>Upcoming Event</h2>
 							<article>
 								<a href="#" class="image image-full"><img src="public/images/pic07.jpg" alt=""></a>
 								<header>
