Style tweaks on post/event pages.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: SocialGeeks Inc.
 									{% if tag contains "feature" %}
 									<article class="box-excerpt">
 										{% if post.thumbnail %}
-											<a href="{{ post.url }}" class="image image-left"><img src="public/images/thumbnails/{{ post.thumbnail }}" alt="" style="min-width: 180px; min-height: 180px;" /></a>
+											<a href="{{ post.url }}" class="image image-left"><img src="public/images/thumbnails/{{ post.thumbnail }}" alt="" /></a>
 										{% endif %}
 										<div>
 											<header>
@@ -79,7 +79,7 @@ title: SocialGeeks Inc.
 
 									<article class="box-excerpt">
 										{% if post.thumbnail %}
-											<a href="{{ post.url }}" class="image image-left"><img src="public/images/thumbnails/{{ post.thumbnail }}" alt="" style="min-width: 180px; min-height: 180px;" /></a>
+											<a href="{{ post.url }}" class="image image-left"><img src="public/images/thumbnails/{{ post.thumbnail }}" alt="" /></a>
 										{% endif %}
 										<div>
 											<header>
