--- a/_posts/2013-07-09-SocialGeeks-Inc.html
+++ b/_posts/2013-07-09-SocialGeeks-Inc.html
@@ -1,13 +1,13 @@
 ---
 layout: post 
 title: "SocialGeeks Inc."
-description: "SocialGeeks have incorporated"
+description: "It's Official! SocialGeeks has incorporated in the state of Idaho as a non-profit coporation."
 thumbnail: articles_of_incorporation.jpg
 category: post 
 tags: []
 ---
 
-<p><img src="/public/images/articles_of_incorporation.jpg" align="left" />SocialGeeks has incorporated in the state of Idaho as a non-profit coporation. Thanks to <a href="http://www.idahononprofits.org/nonprofit-resource-thursdays" target="_blank">Boise Library's Free Resource Thursday</a> and the professionals and mentors available, we were able to quickly put together our Articles of Incorporation in a manner that will facilitate processing our 1023 form with the IRS. The 1023 will allow SocialGeeks to become a recognized 501(c)3 non-profit organization.</p>
+<p>SocialGeeks has incorporated in the state of Idaho as a non-profit coporation. Thanks to <a href="http://www.idahononprofits.org/nonprofit-resource-thursdays" target="_blank">Boise Library's Free Resource Thursday</a> and the professionals and mentors available, we were able to quickly put together our Articles of Incorporation in a manner that will facilitate processing our 1023 form with the IRS. The 1023 will allow SocialGeeks to become a recognized 501(c)3 non-profit organization.</p>
 
 <p>There are two articles in the <a href="http://www.sos.idaho.gov/corp/acro4/arts_inc_np.pdf" target="_blank">sample Articles</a> provided by the Idaho secretary of state that need extra attention if you plan on filing your <a href="http://www.irs.gov/pub/irs-pdf/f1023.pdf" target="_blank">IRS 1023</a> to obtain tax exempt status: Article 2 "The purpose for which the corporation is organized is:" and Article 8 "Upon dissolution the assets shall be distributed:".</p>
 
