--- a/_posts/2013-07-09-SocialGeeks-Inc.html
+++ b/_posts/2013-07-09-SocialGeeks-Inc.html
@@ -1,5 +1,5 @@
 ---
-layout: post 
+layout: page 
 title: "SocialGeeks Inc."
 description: "It's Official! SocialGeeks has incorporated in the state of Idaho as a non-profit coporation."
 thumbnail: articles_of_incorporation.jpg
