Linked up most the dead links to placeholder pages.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: page
 title: "About"
 description: "What We Do"
 tags: [] 
-navigation: page 
+category: about 
 ---
 
 <h2>Mission/Vision</h2>
@@ -29,7 +29,7 @@ Brian McManus -
 
 Dan Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).  
 
-Derek Thomas - Having an eye for good design and layout, Derek leads design and development efforts as well as public relations at Galaxis Communications. Prior to Galaxis Communications, Derek has worked with the Internet pretty much since its commercialization with over 15 years of freelance web design and development experience.  
+Derek Thomas (geek/designer) has worked with the Internet pretty much since its commercialization with over 15 years of freelance web design and development experience.  In his spare time he dabbles with indie game development and electronics.
 
 <h2>Events & Activities</h2>
 experiental learning  
