Clean up Board of Directors and Special Thanks

--- a/about.html
+++ b/about.html
@@ -25,20 +25,23 @@ Go to our <a href="https://github.com/socialgeeks">GitHub Organization</a> and s
 
 <h2>Board of Directors</h2>
 
-Brian McManus -  
+<ul>
+	<li>Brian McManus -  </li>
 
-Dan Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).  
+	<li>Dan Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).</li>
 
-Derek Thomas (geek/designer) has worked with the Internet pretty much since its commercialization with over 15 years of freelance web design and development experience.  In his spare time he dabbles with indie game development and electronics.
+	<li>Derek Thomas (geek/designer) has worked with the Internet pretty much since its commercialization with over 15 years of freelance web design and development experience.  In his spare time he dabbles with indie game development and electronics.</li>
+</ul>
 
 <h2>Events & Activities</h2>
-experiental learning  
 
 <h2>Special Thanks</h2>  
 
--- CTF Mentors  
--- Twin Falls High School  
--- College of Southern Idaho  
--- Our past and current sponsors  
--- Anybody that has ever listened  to or contributed to the vision and growth of our organization.  Email us and we'll add you to the list.  
+<ul>
+	<li>CTF Mentors</li>
+	<li>Twin Falls High School</li>
+	<li>College of Southern Idaho</li>
+	<li>Our past and current sponsors</li>
+	<li>Anybody that has ever listened  to or contributed to the vision and growth of our organization.  <a href="contact.html">Email us</a> and we'll add you to the list.</li>
+</ul>
 
