Add email address instead of contact box until we get dynamic content working.

--- a/contact.html
+++ b/contact.html
@@ -8,3 +8,8 @@ tags: []
 
 <h2></h2>
 
+<span class="byline">Be informed by email of upcoming events and other announcements.</span>
+<p style="margin-top: 20px;">
+While we are working on the site, please email us: <a href="mailto:socialgeek@gmail.com">socialgeek@gmail.com</a>
+</p>
+
