Update sponsors page.

--- a/sponsors.html
+++ b/sponsors.html
@@ -6,5 +6,14 @@ category: sponsors
 tags: [] 
 ---
 
-<h2></h2>
+<p>Thanks to these businesses that have lended their support to SocialGeeks.</p>
 
+<div style="text-align:center;margin-top:50px;margin-bottom:20px;"><a target="_blank" href="http://bestnotes.com"><img src="/public/images/sponsors/bestnotes_logo_web.png" alt="BestNotes CRM/EMR" title="BestNotes CRM/EMR" /></a></div> 
+
+<div style="text-align:center;margin-top:50px;margin-bottom:20px;"><a target="_blank" href="http://kickbackpoints.com"><img src="/public/images/sponsors/krs_header_logo.png" alt="KickBack Points/KickBack Rewards Systems" title="KickBack Points/KickBack Rewards Systems" /></a></div> 
+
+<div style="text-align:center;margin-top:75px;margin-bottom:20px;"><a target="_blank" href="http://Pluralsight.com"><img src="/public/images/sponsors/pluralsight-grayscale-500x109-v1.png" alt="pluralsight hardcore developer training" title="pluralsight hardcore developer training" /></a></div>
+
+<div style="text-align:center;margin-top:75px;margin-bottom:20px;"><a target="_blank" href="http://github.com"><img src="/public/images/sponsors/GitHub-Logo.png" width="400px" alt="GitHub" title="GitHub" /></a></div>
+
+<div style="text-align:center;margin-top:75px;margin-bottom:20px;"><a target="_blank" href="http://oreilly.com"><img src="/public/images/sponsors/sm.ora.logo.plain.gif" alt="O'Reilly Media" title="O'Reilly Media" /></a></div>
