--- a/about.html
+++ b/about.html
@@ -6,42 +6,50 @@ tags: []
 category: about 
 ---
 
-<h2>Mission/Vision</h2>
+<p>SocialGeeks Inc. is a student leadership organization focusing connecting community members and industry professions with students working on project and game based learning.</p>
 
-SocialGeeks Inc. is a student leadership organization focusing on project and game based learning through the use of community members and professionals in the fields of technology.   
+<p>Geek incubator. Collect geeks, mentor, be mentored, use network to enhance, supplement, replace high school computer curriculum. Wash, repeat.  </p>
 
-Geek incubator. Collect geeks, mentor, be mentored, use network to enhance, supplement, replace high school computer curriculum. Wash, repeat.  
-
-<h2>What can you do to help?  Get involved.</h2>
+<h2>Get Involved</h2>
 
 <h3>Join us</h3>
-at one of our events or <a href="contact.html">contact us</a> so we can get to know you.
+
+<p>at one of our events or <a href="contact.html">contact us</a> so we can get to know you.</p>
 
 <h3>Mentor</h3>
-Work with high school students at one of our upcoming events, we'll train you.  Even better, let us do an event based off of something from your knowledge base and you can train us.  
+<p>Work with college or high school students at one of our upcoming events, we'll train you.  Even better, let us do an event based off of one of your passions.  You train us and we'll support your event.</p>
 
 <h3>Contribute Knowledge</h3>
-Go to our <a href="https://github.com/socialgeeks">GitHub Organization</a> and submit pull requests to any of our respositories. We believe in the power of transparency and accumulated group knowledge.  
+<p>Go to our <a href="https://github.com/socialgeeks">GitHub Organization</a> and submit pull requests to any of our respositories. We believe in the power of transparency and accumulated group knowledge.</p>
 
 <h2>Board of Directors</h2>
 
 <ul>
-	<li>Brian McManus -  </li>
+	<li><img src="/public/images/board/brian.jpg" align="left" width="125" height="125" />Brian McManus - <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></li>
 
-	<li>Dan Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).</li>
+	<li><img src="/public/images/board/dan.jpg" align="left" width="125" height="125" />Dan "viking" Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).<p>&nbsp;</p></li>
 
 	<li>Derek Thomas (geek/designer) has worked with the Internet pretty much since its commercialization with over 15 years of freelance web design and development experience.  In his spare time he dabbles with indie game development and electronics.</li>
 </ul>
 
-<h2>Events & Activities</h2>
-
 <h2>Special Thanks</h2>  
 
 <ul>
-	<li>CTF Mentors</li>
-	<li>Twin Falls High School</li>
-	<li>College of Southern Idaho</li>
-	<li>Our past and current sponsors</li>
-	<li>Anybody that has ever listened  to or contributed to the vision and growth of our organization.  <a href="contact.html">Email us</a> and we'll add you to the list.</li>
+	<li>Our <a href="sponsors.html">past and current sponsors</a></li>
+	<li>Bill Taylor</li>
+	<li>BinaryBuddha</li>
+	<li>Brian Gergens</li>
+	<li>Chris "furby" Zuck</li>
+	<li>Choncey Blaylock</li>
+	<li>Ian Laird</li>
+	<li>Jason Torgrimson</li>
+	<li>Jayte Boehler</li>
+	<li>Jon Winther</li>
+	<li>Korey Thoele</li>
+	<li>Noah Heck</li>
+	<li>Wes Gill</li>
+	<li><a href="http://www.tfhsbruins.com/" target="_blank">Twin Falls High School</a></li>
+	<li><a href="http://www.csi.edu" target="_blank">College of Southern Idaho</a></li>
+	<li>Anybody that has ever listened to or contributed to the vision and growth of our organization.  <a href="contact.html">Email us</a> and we'll add you to the list.</li>
 </ul>
 
