--- a/about.html
+++ b/about.html
@@ -25,29 +25,31 @@ category: about
 <h2>Board of Directors</h2>
 
 <ul>
-	<li><img src="/public/images/board/brian.jpg" align="left" width="125" height="125" />Brian McManus - <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/board/brian.jpg" align="left" width="150" height="150" class="image image-left" />Brian McManus - <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></li>
 
-	<li><img src="/public/images/board/dan.jpg" align="left" width="125" height="125" />Dan "viking" Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).<p>&nbsp;</p></li>
+	<li><img src="/public/images/board/dan.jpg" align="left" width="150" height="150" class="image image-left" />Dan "viking" Daggett (geek/foodie) is the executive director of SocialGeeks Inc. Experienced in web and systems design, his interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).<p>&nbsp;</p></li>
 
 	<li>Derek Thomas (geek/designer) has worked with the Internet pretty much since its commercialization with over 15 years of freelance web design and development experience.  In his spare time he dabbles with indie game development and electronics.</li>
 </ul>
 
 <h2>Special Thanks</h2>  
 
+<h3><a href="sponsors.html">Our current and past sponsors</a></h3>
+<h3>Geeks, Mentors and Inspiration</h3>
+
 <ul>
-	<li>Our <a href="sponsors.html">past and current sponsors</a></li>
-	<li>Bill Taylor</li>
-	<li>BinaryBuddha</li>
-	<li>Brian Gergens</li>
-	<li>Chris "furby" Zuck</li>
-	<li>Choncey Blaylock</li>
-	<li>Ian Laird</li>
-	<li>Jason Torgrimson</li>
-	<li>Jayte Boehler</li>
-	<li>Jon Winther</li>
-	<li>Korey Thoele</li>
-	<li>Noah Heck</li>
-	<li>Wes Gill</li>
+	<li><img src="/public/images/mentors/bill_taylor.jpg" align="left" width="80" height="80" class="image image-left" />Bill Taylor<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/binarybuddha.jpg" align="left" width="80" height="80" class="image image-left" />BinaryBuddha<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/brian_gergens.jpg" align="left" width="80" height="80" class="image image-left" />Brian Gergens<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/chris_furby_zuck.jpg" align="left" width="80" height="80" class="image image-left" />Chris "furby" Zuck<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/choncey_blaylock.jpg" align="left" width="80" height="80" class="image image-left" />Choncey Blaylock<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/ian_laird.jpg" align="left" width="80" height="80" class="image image-left" />Ian Laird<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/jason_torgrimson.jpg" align="left" width="80" height="80" class="image image-left" />Jason Torgrimson<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/jayte_boehler.jpg" align="left" width="80" height="80" class="image image-left" />Jayte Boehler<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/jon_winther.jpg" align="left" width="80" height="80" class="image image-left" />Jon Winther<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li>Korey Thoele<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li><img src="/public/images/mentors/noah_heck.jpg" align="left" width="80" height="80" class="image image-left" />Noah Heck<p>&nbsp;</p><p>&nbsp;</p></li>
+	<li>Wes Gill<p>&nbsp;</p><p>&nbsp;</p></li>
 	<li><a href="http://www.tfhsbruins.com/" target="_blank">Twin Falls High School</a></li>
 	<li><a href="http://www.csi.edu" target="_blank">College of Southern Idaho</a></li>
 	<li>Anybody that has ever listened to or contributed to the vision and growth of our organization.  <a href="contact.html">Email us</a> and we'll add you to the list.</li>
