Change message on contact page to use the MailChimp form instead of my email address.

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,6 @@ tags: []
 
 <span class="byline">Be informed by email of upcoming events and other announcements.</span>
 <p style="margin-top: 20px;">
-While we are working on the site, please email us: <a href="mailto:socialgeek@gmail.com">socialgeek@gmail.com</a>
+<p  style="margin-top: 20px;">Use the <strong>"STAY CONNECTED"</strong> in the footer to sign up for updates and to stay involved as we are building our visiion.
 </p>
 
