Add new picture for Wes.  Add Chika to about page.

--- a/about.html
+++ b/about.html
@@ -106,22 +106,24 @@ category: about
 					<h3 style="padding-top: 0px !important;">Geeks, Mentors and Inspiration</h3>
 
 					<div class="4u">
-						<div class="mentor"><img src="/public/images/mentors/bill_taylor.jpg" /><span>Bill Taylor</span></div>
-						<div class="mentor"><img src="/public/images/mentors/binarybuddha.jpg" /><span>BinaryBuddha</span></div>
-						<div class="mentor"><img src="/public/images/mentors/brian_gergens.jpg" /><span>Brian Gergens</span></div>
-						<div class="mentor"><img src="/public/images/mentors/chris_furby_zuck.jpg" /><span>Chris "furby" Zuck</span></div>
+						<div class="mentor"><img src="/public/images/geeks/bill_taylor.jpg" /><span>Bill Taylor</span></div>
+						<div class="mentor"><img src="/public/images/geeks/binarybuddha.jpg" /><span>BinaryBuddha</span></div>
+						<div class="mentor"><img src="/public/images/geeks/brian_gergens.jpg" /><span>Brian Gergens</span></div>
+						<div class="mentor"><img src="/public/images/geeks/chika_daggett.jpg" /><span>Chika Daggett</span></div>
+						<div class="mentor"><img src="/public/images/geeks/chris_furby_zuck.jpg" /><span>Chris "furby" Zuck</span></div>
 					</div>
 					<div class="4u">
-						<div class="mentor"><img src="/public/images/mentors/choncey_blaylock.jpg" /><span>Choncey Blaylock</span></div>
-						<div class="mentor"><img src="/public/images/mentors/ian_laird.jpg" /><span>Ian Laird</span></div>
-						<div class="mentor"><img src="/public/images/mentors/jason_torgrimson.jpg" /><span>Jason Torgrimson</span></div>
-						<div class="mentor"><img src="/public/images/mentors/jayte_boehler.jpg" /><span>Jayte Boehler</span></div>
+						<div class="mentor"><img src="/public/images/geeks/choncey_blaylock.jpg" /><span>Choncey Blaylock</span></div>
+						<div class="mentor"><img src="/public/images/geeks/ian_laird.jpg" /><span>Ian Laird</span></div>
+						<div class="mentor"><img src="/public/images/geeks/jason_torgrimson.jpg" /><span>Jason Torgrimson</span></div>
+						<div class="mentor"><img src="/public/images/geeks/jayte_boehler.jpg" /><span>Jayte Boehler</span></div>
+						<div class="mentor"><img src="/public/images/geeks/jon_winther.jpg" /><span>Jon Winther</span></div>
 					</div>
 					<div class="4u">
-						<div class="mentor"><img src="/public/images/mentors/jon_winther.jpg" /><span>Jon Winther</span></div>
-						<div class="mentor"><img src="/public/images/mentors/pna.jpg" />Korey Thoele</div>
-						<div class="mentor"><img src="/public/images/mentors/noah_heck.jpg" /><span>Noah Heck</span></div>
-						<div class="mentor"><img src="/public/images/mentors/pna.jpg" />Wes Gill</div>
+						<div class="mentor"><img src="/public/images/geeks/pna.jpg" />Korey Thoele</div>
+						<div class="mentor"><img src="/public/images/geeks/noah_heck.jpg" /><span>Noah Heck</span></div>
+						<div class="mentor"><img src="/public/images/geeks/pna.jpg" /><span>Matthew Thompson</span></div>
+						<div class="mentor"><img src="/public/images/geeks/wes_gill.jpg" />Wes Gill</div>
 					</div>
 				</div>
 				<div class="row">
