Add Patrick to about page.

--- a/about.html
+++ b/about.html
@@ -120,10 +120,11 @@ category: about
 						<div class="mentor"><img src="/public/images/geeks/jon_winther.jpg" /><span>Jon Winther</span></div>
 					</div>
 					<div class="4u">
-						<div class="mentor"><img src="/public/images/geeks/pna.jpg" />Korey Thoele</div>
+						<div class="mentor"><img src="/public/images/geeks/pna.jpg" /><span>Korey Thoele</span></div>
 						<div class="mentor"><img src="/public/images/geeks/noah_heck.jpg" /><span>Noah Heck</span></div>
 						<div class="mentor"><img src="/public/images/geeks/pna.jpg" /><span>Matthew Thompson</span></div>
-						<div class="mentor"><img src="/public/images/geeks/wes_gill.jpg" />Wes Gill</div>
+						<div class="mentor"><img src="/public/images/geeks/patrick_johnson.jpg" /><span>Patrick Johnson</span></div>
+						<div class="mentor"><img src="/public/images/geeks/wes_gill.jpg" /><span>Wes Gill</span></div>
 					</div>
 				</div>
 				<div class="row">
