Remove title from Board of Directors listing for Dan.

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ category: about
 							<div>
 								<header>
 									<strong>Dan "viking" Daggett</strong>
-									<p><em style="font-style:italic">geek/foodie</em> &mdash; Executive Director</p>
+									<p><em style="font-style:italic">geek/foodie</em></p>
 								</header>
 								<p>Experienced in web and systems design, Dan's interests involve the collecting and sharing of knowledge in a variety of topics. His favorite being computer security and food. He enjoys open dialog with anybody willing to do so (and some that aren't).</p>
 							</div>
